--- a/about.html
+++ b/about.html
@@ -198,7 +198,7 @@
                         <h5 class="text-white mb-4">Get In Touch</h5>
                         <p><i class="fa fa-map-marker-alt me-3"></i>V2PC+JW8 , Juja </p>
                         <p><i class="fa fa-phone-alt me-3"></i>+254 07075752</p>
-                        <p><i class="fa fa-envelope me-3"></i>mugobrian58@gmail.com</p>
+                        <p><i class="fa fa-phone-alt me-3"></i>+254 795811 714</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
