--- a/contact.html
+++ b/contact.html
@@ -60,9 +60,7 @@
                         
                         <a href="contact.html" class="nav-item nav-link active">Contact</a>
                     </div>
-                    <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>
-                    <a href="" class="btn btn-secondary text-light rounded-pill py-2 px-4 ms-3">Pro Version</a>
-                </div>
+                    </div>
             </nav>
 
             <div class="container-xxl py-5 bg-primary hero-header mb-5">
@@ -161,7 +159,7 @@
                 <h5 class="text-white mb-4">Get In Touch</h5>
                 <p><i class="fa fa-map-marker-alt me-3"></i>V2PC+JW8 , Juja </p>
                 <p><i class="fa fa-phone-alt me-3"></i>+254 07075752</p>
-                <p><i class="fa fa-envelope me-3"></i>mugobrian58@gmail.com</p>
+                <p><i class="fa fa-phone-alt me-3"></i>+254 795811 714</p>
                 <div class="d-flex pt-2">
                     <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -194,7 +192,6 @@
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                     &copy; <a class="border-bottom" href="#">Racy Genics</a>, All Right Reserved. 
                     
-                    <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                     Designed By <a class="border-bottom" href="">Shyee Codes</a>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
@@ -202,7 +199,7 @@
                         <a href="">Home</a>
                         <a href="">Cookies</a>
                         <a href="">Help</a>
-                        <a href="">FQAs</a>
+                        <a href="">FAQs</a>
                     </div>
                 </div>
             </div>
