--- a/service.html
+++ b/service.html
@@ -173,7 +173,7 @@
                     </div>
                 
 
-                    
+
                 </div>
             </div>
         </div>
@@ -186,7 +186,7 @@
                 <h5 class="text-white mb-4">Get In Touch</h5>
                 <p><i class="fa fa-map-marker-alt me-3"></i>V2PC+JW8 , Juja </p>
                 <p><i class="fa fa-phone-alt me-3"></i>+254 07075752</p>
-                <p><i class="fa fa-envelope me-3"></i>mugobrian58@gmail.com</p>
+                <p><i class="fa fa-phone-alt me-3"></i>+2547 95811 714</p>
                 <div class="d-flex pt-2">
                     <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -227,7 +227,7 @@
                         <a href="">Home</a>
                         <a href="">Cookies</a>
                         <a href="">Help</a>
-                        <a href="">FQAs</a>
+                        <a href="">FAQs</a>
                     </div>
                 </div>
             </div>
