--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                             </div>
                         </div>
                         <div class="d-flex align-items-center mt-4">
-                            <a class="btn btn-primary rounded-pill px-4 me-3" href="">Read More</a>
-                            <a class="btn btn-outline-primary btn-square me-3" href=""><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-primary rounded-pill px-4 me-3" href="/about.html">Read More</a>
+                            <a class="btn btn-outline-primary btn-square me-3" href="https://web.facebook.com/Racy-Genics-110222988116896/?ref=page_internal"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-primary btn-square me-3" href=""><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-primary btn-square me-3" href=""><i class="fab fa-instagram"></i></a>
                         </div>
@@ -125,9 +125,11 @@
                         <h3 class="text-white">Ready to get started</h3>
                         <small class="text-white">Talk to one of our team members .</small>
                         <div class="position-relative w-100 mt-3">
-                            <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="Enter Your Email" style="height: 48px;">
-                            <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i class="fa fa-paper-plane text-primary fs-4"></i></button>
-                        </div>
+                            <form action="mailto:sheilabernicew@gmail.com">
+                            <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5"  type="text" placeholder="Enter Your Email" style="height: 48px;">
+                            <button type="submit" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i class="fa fa-paper-plane text-primary fs-4"></i></button>
+                        
+                        </form></div>
                     </div>
                     <div class="col-md-6 text-center mb-n5 d-none d-md-block">
                         <img class="img-fluid mt-5" style="height: 250px;" src="img/newsletter.png">
@@ -153,7 +155,7 @@
                             </div>
                             <h5 class="mb-3">Research & Market Intelligence</h5>
                             <p>We create custom research programs , using our capabilities to help clients own unique point of views that advance their objectives.</p>
-                            <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+                            <a class="btn px-3 mt-auto mx-auto" href="service.html">Read More</a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
@@ -163,7 +165,7 @@
                             </div>
                             <h5 class="mb-3">Web Design</h5>
                             <p>We help start up organizations build an online brand website to engage their clients more. </p>
-                            <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+                            <a class="btn px-3 mt-auto mx-auto" href="service.html">Read More</a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
@@ -173,7 +175,7 @@
                             </div>
                             <h5 class="mb-3">Social Media Marketing</h5>
                             <p> We help organizations earn the opportunity to express point of views through skillful participation in the most credible and influential communications media </p>
-                            <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+                            <a class="btn px-3 mt-auto mx-auto" href="service.html">Read More</a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.1s">
@@ -183,7 +185,7 @@
                             </div>
                             <h5 class="mb-3">Content & Editorial</h5>
                             <p>  We help organizations echo their insight ideas and perspectives through compelling storytelling.With accessible language and sophisticated thinking, we enable our clients to elevate their convos with target audiences </p>
-                            <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+                            <a class="btn px-3 mt-auto mx-auto" href="service.html">Read More</a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
@@ -193,7 +195,7 @@
                             </div>
                             <h5 class="mb-3">Digital  Advertising</h5>
                             <p>We help organizations amplify their insights and perspectives by engaging key audiences and influencer on the channels, platforms and environments where they seek and consume information.</p>
-                            <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+                            <a class="btn px-3 mt-auto mx-auto" href="service.html">Read More</a>
                         </div>
                     </div>
 
@@ -205,7 +207,7 @@
                             </div>
                             <h5 class="mb-3">Communication Management </h5>
                             <p>We help organizations execute strategic  communication plans and communication coordination. We also cover press release protocols and speech writing according to audience's behavior  </p>
-                            <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+                            <a class="btn px-3 mt-auto mx-auto" href="/service.html">Read More</a>
                         </div>
                     </div>
                 
@@ -281,8 +283,11 @@
                     <h5 class="text-white mb-4">Newsletter</h5>
                     <p>For Questions, Enquiries or Anything Feel free to contact us</p>
                     <div class="position-relative w-100 mt-3">
+
+                        <form action="mailto:sheilabernicew@gmail.com"></form>
                         <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="Your Email" style="height: 48px;">
-                        <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i class="fa fa-paper-plane text-primary fs-4"></i></button>
+                        <button type="submit" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i class="fa fa-paper-plane text-primary fs-4"></i></button>
+                    </form> 
                     </div>
                 </div>
             </div>
