--- a/about.html
+++ b/about.html
@@ -238,16 +238,9 @@ Through our proven client engagement process, our clients are empowered to direc
                             &copy; <a class="border-bottom" href="#">Racy Genics</a>, All Right Reserved. 
 							
 							<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-							Designed By <a class="border-bottom" href="">Shyee Codes</a>
+							Designed By <a class="border-bottom" href="https://sheilabernicew.wixsite.com/website-1/">Shyee Codes</a>
                         </div>
-                        <div class="col-md-6 text-center text-md-end">
-                            <div class="footer-menu">
-                                <a href="">Home</a>
-                                <a href="">Cookies</a>
-                                <a href="">Help</a>
-                                <a href="">FQAs</a>
-                            </div>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
