--- a/contact.html
+++ b/contact.html
@@ -191,16 +191,9 @@
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                     &copy; <a class="border-bottom" href="#">Racy Genics</a>, All Right Reserved. 
                     
-                    Designed By <a class="border-bottom" href="">Shyee Codes</a>
+                    Designed By <a class="border-bottom" href="https://sheilabernicew.wixsite.com/website-1/">Shyee Codes</a>
                 </div>
-                <div class="col-md-6 text-center text-md-end">
-                    <div class="footer-menu">
-                        <a href="">Home</a>
-                        <a href="">Cookies</a>
-                        <a href="">Help</a>
-                        <a href="">FAQs</a>
-                    </div>
-                </div>
+               
             </div>
         </div>
     </div>
